--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vxe-ui/plugin-render-wangeditor": "^4.0.2",
     "axios": "^1.7.2",
     "echarts": "^5.5.1",
     "nprogress": "^0.2.0",
