--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-router": "~4.5.0",
     "vxe-pc-ui": "~4.7.0",
     "vxe-table": "~4.14.0",
+    "vxe-design": "^4.0.0",
     "xe-utils": "^3.7.6"
   },
   "devDependencies": {
