--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # CDN 静态资源地址
 VITE_APP_CDN_URL=https://vxeui.com/umd/
-# 开发环境后端接口地址
-VITE_APP_BASE_API=https://api.vxeui.com/demo
+# 后端接口地址
+VITE_APP_BASE_API=https://apitest.vxeui.com/adminapi
