--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "4.0.0",
   "type": "module",
   "scripts": {
-    "update": "npm install --legacy-peer-deps",
+    "update": "pnpm install",
     "serve": "npm run dev",
     "dev": "vite",
     "build": "vue-tsc && vite build",
